Updated About.css: Improved styling for the About section. - Updated ContactForm.jsx: Fixed issues with the contact form layout and functionality. - Updated ServiceCompare.css and ServiceCompare.jsx: Enhanced styling and fixed layout issues in the service comparison component. - Updated ServiceTable.css and ServiceTable.jsx: Improved card alignment and styling in the services table, ensuring uniform height and left-aligned bullet points. - Updated Services.jsx: Made minor adjustments for consistency with other components.

--- a/Frontend/src/components/About/About.css
+++ b/Frontend/src/components/About/About.css
@@ -3,13 +3,14 @@
 }
 
 .hero-section-about {
-  background: linear-gradient(135deg, #007bff 0%, #6610f2 100%);
+  background: linear-gradient(180deg, #007bff 0%, #6610f2 100%);
   padding: 5rem 0;
 }
 
 .values-section {
   background: #4e6363;
   padding: 0rem 0;
+  display: flex;
 }
 
 .value-card {
@@ -20,11 +21,6 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: rem 1rem;
   top: -50%;
-}
-
-.value-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
 }
 
 .value-card .card-title {
