--- a/Frontend/src/components/ServiceCompare/ServiceCompare.css
+++ b/Frontend/src/components/ServiceCompare/ServiceCompare.css
@@ -1,9 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
 .services-compare-container {
-  padding: 0px;
-  border-radius: 10px;
-  margin: 0 0;
   overflow-x: hidden;
 }
 
@@ -13,12 +10,11 @@
   color: #333;
   margin-bottom: 0;
   text-transform: uppercase;
-  letter-spacing: 2px;
 }
 
 .services-compare-table {
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 1rem;
   overflow: hidden;
   border-collapse: separate;
   border-spacing: 0;
