--- a/Frontend/src/components/ServiceTable/ServiceTable.css
+++ b/Frontend/src/components/ServiceTable/ServiceTable.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .services-page {
-  background: #f5f7fa;
+  background: transparent;
 }
 
 .hero-section-services {
@@ -17,8 +17,33 @@ body {
 }
 
 .service-card {
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  border-radius: 10px;
+  border-radius: 1rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.257);
   overflow: hidden;
+}
+.service-table-container {
+  padding: 2rem 0;
+}
+
+.service-card-wrapper {
+  position: relative;
+  padding-top: 2.2rem;
+  text-align: left;
+}
+
+.most-popular-tag {
+  position: absolute;
+  text-align: center;
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #007bff;
+  color: #fff;
+  padding: 0.5rem 2rem;
+  border-top-right-radius: 1rem;
+  border-top-left-radius: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  z-index: -1;
+  width: 90%;
 }
